[CIID-7921] fix non text contrast issue for toggle

--- a/generate.web/ClientApp/src/assets/styles/app_theme.scss
+++ b/generate.web/ClientApp/src/assets/styles/app_theme.scss
@@ -18,3 +18,7 @@ $app-theme: mat.define-light-theme(
 .mdc-text-field {
     background-color: white !important;
 }
+
+.mdl-switch__thumb {
+    background: #ff4081;
+}
